log/build_2024-10-23_06-57-29/robot_description/stderr.log
  File "/home/azakaria/Documents/sim_v2/ros2_ws/install/robot_description/lib/python3.12/site-packages/robot_description/aruco_detection_pose_estimation.py", line 82
    self.aruco_marker_size, self.mtx self.dst)
                            ^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

